<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HelpActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="371dp"
        android:layout_height="62dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="366dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:linksClickable="true"
        android:text="@string/hyperlink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="363dp"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:text="@string/game_information_nthis_game_is_a_searching_game_you_should_find_all_the_bad_apples_in_order_to_win_the_game_let_us_try_to_find_them"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="365dp"
        android:layout_height="23dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="1dp"
        android:text="@string/external_resources"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="357dp"
        android:layout_height="25dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="1dp"
        android:text="@string/image_for_bad_apple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView

        android:id="@+id/textView10"
        android:layout_width="356dp"
        android:layout_height="35dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="1dp"
        android:text="@string/image_for_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />
</androidx.constraintlayout.widget.ConstraintLayout>